# anime-quotes

./: .gitignore  Cargo.toml  LICENSE  README.md  anime.toml  config.toml
src/: main.rs
